# queue-drop

./: Cargo.toml  README.md  flake.nix
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
src/: lib.rs  primitive_impl.rs
