[package]
name = "queue-drop"
version = "0.1.0"
edition = "2024"
authors = ["Chlorodose <chlorodose@chlorodose.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chlorodose/queue-drop"
description = "Drop your structure in queue to prevent stack overflow!"
categories = ["data-structures", "rust-patterns", "no-std"]
keywords = ["drop", "stack", "stack_overflow"]

[workspace]
resolver = "3"
members = ["proc-macro"]

[dependencies]
queue-drop-macro = { version = "0.1.0", path = "proc-macro" }
