[package]
name = "queue-drop-macro"
version = "0.1.0"
edition = "2024"
authors = ["Chlorodose <chlorodose@chlorodose.me>"]
license = "MIT"
repository = "https://github.com/chlorodose/queue-drop"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
